<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculus</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="version">1.0.0</string>
    <string name="settings_problems_count">Problems count</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="multiplication_multiplier_label">Multiplier</string>
    <string name="multiplication_multiplicand_label">Multiplicand</string>
    <string name="division_factor_label">Factor</string>
    <string name="division_dividend_label">Dividend</string>
    <string name="settings_category_basic">Basic settings</string>
    <string name="settings_category_multiplication">Multiplication settings</string>
    <string name="settings_category_division">Division settings</string>
    <string name="preference_file_key">cz.svecon.calculus.preferences</string>
    <string name="settings_multiplier">settings_multiplier</string>
    <string name="settings_multiplicand">settings_multiplicand</string>
    <string name="settings_factor">settings_factor</string>
    <string name="settings_dividend">settings_dividend</string>
    <string name="title_activity_division">DivisionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_multiplication">MultiplicationActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
